catlist info change

--- a/index.html
+++ b/index.html
@@ -569,16 +569,20 @@
 														<ul id="menu-1-e30221d" class="hfe-nav-menu">
 															<li id="menu-item-18"
 																class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home parent hfe-creative-menu">
-																<a href="/#about" class="hfe-menu-item">ABOUT</a></li>
+																<a href="/#about" class="hfe-menu-item">ABOUT</a>
+															</li>
 															<li id="menu-item-20"
 																class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home parent hfe-creative-menu">
-																<a href="/#ROADMAP" class="hfe-menu-item">ROADMAP</a></li>
+																<a href="/#ROADMAP" class="hfe-menu-item">ROADMAP</a>
+															</li>
 															<li id="menu-item-21"
 																class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home parent hfe-creative-menu">
-																<a href="/#TEAM" class="hfe-menu-item">TEAM</a></li>
+																<a href="/#TEAM" class="hfe-menu-item">TEAM</a>
+															</li>
 															<li id="menu-item-22"
 																class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home parent hfe-creative-menu">
-																<a href="/#FAQ" class="hfe-menu-item">FAQ</a></li>
+																<a href="/#FAQ" class="hfe-menu-item">FAQ</a>
+															</li>
 														</ul>
 													</nav>
 												</div>
@@ -724,12 +728,15 @@
 										display: inline-block
 									}
 								</style> &#8211; AstarCats is the first cats NFT collection on Astar Network<br>
-								&#8211; AstarCats is not just another PFP project, but it comes with countless utilities and holder
-								benefits planned ahead! <br>
+								&#8211; AstarCats is not just another PFP project, but it comes with many utilities and holder benefits
+								planned ahead!
+								<br>
 								&#8211; Our ultimate mission is to support promising projects on Astar Network by providing our creative
 								resources. <br>
 								&#8211; The art is CC0(Creative Common zero), which means you will own all rights to the NFT you
-								mint/buy. This will allow you or any projects to use AstarCats brand and create AstarCats ecosystem
+								mint/buy. This will allow you or any projects to use AstarCats brand and help create AstarCats
+								ecosystem.
+
 							</div>
 						</div>
 					</div>
@@ -835,8 +842,10 @@
 											class="elementor-element elementor-element-d3921c1 elementor-widget elementor-widget-text-editor"
 											data-id="d3921c1" data-element_type="widget" data-widget_type="text-editor.default">
 											<div class="elementor-widget-container">
-												　- Catlist sale will take place on 13th April at 00:00 UTC <br>
-												　- Public sale will take place on 13th April at 13:00 UTC </div>
+												　- Catlist sale will take place on April 15th, 2022 7:00 AM EST
+												<br>
+												　- Public sale will take place on April 15, 2022 11:00 PM EST
+											</div>
 										</div>
 										<div
 											class="elementor-element elementor-element-28efe04 elementor-icon-list--layout-traditional elementor-list-item-link-full_width elementor-widget elementor-widget-icon-list"
@@ -874,8 +883,7 @@
 											class="elementor-element elementor-element-ee77aa9 elementor-widget elementor-widget-text-editor"
 											data-id="ee77aa9" data-element_type="widget" data-widget_type="text-editor.default">
 											<div class="elementor-widget-container">
-												　- 50% of funds raised from mint sale will be transferred to DAO wallet. The community will
-												decide how the fund will be used in the future. </div>
+												　- The community will decide how the fund will be used in the future through DAO voting</div>
 										</div>
 									</div>
 								</div>
@@ -941,8 +949,9 @@
 											class="elementor-element elementor-element-012a5e7 elementor-widget elementor-widget-text-editor"
 											data-id="012a5e7" data-element_type="widget" data-widget_type="text-editor.default">
 											<div class="elementor-widget-container">
-												　- We are in talk with other DeFi projects on Astar Network to <br>
-												　- AstarCats Genesis collection grants the highest level of AstarCats membership. </div>
+												　- We are already in talk with other DeFi projects on Astar Network <br>
+												　- AstarCats Genesis collection grants the highest level of AstarCats membership.
+											</div>
 										</div>
 									</div>
 								</div>
@@ -1202,8 +1211,9 @@
 										<input id="cp_tabfour034" type="checkbox" name="tabs">
 										<label for="cp_tabfour034">How many Astar Cats can I mint? </label>
 										<div class="cp_actab-content">
-											<p>Catlisted address can mint 10 NFTs in Catlist mint sale. <br>Any address can mint up to 10 NFTs
-												in Public mint sale. </p>
+											<p>Catlisted address can mint up to 5 NFTs in Catlist mint sale.Any address can mint up to 10 NFTs
+												per transaction in Public mint sale.
+											</p>
 										</div>
 									</div>
 									<div class="cp_actab">
@@ -1232,6 +1242,16 @@
 										<label for="cp_tabfour037">How many 1/1 are there?</label>
 										<div class="cp_actab-content">
 											<p>There are 10 fully animated 1/1s</p>
+										</div>
+									</div>
+									<div class="cp_actab">
+										<input id="cp_tabfour037" type="checkbox" name="tabs">
+										<label for="cp_tabfour037">How will the fund be used?</label>
+										<div class="cp_actab-content">
+											<p>DAO 30%<br>
+												NextPhase Development 20%<br>
+												Team 50%
+											</p>
 										</div>
 									</div>
 								</div>
