--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
 	<title>ASTAR CATS</title>
 	<meta name="robots" content="noindex, nofollow">
 	<link rel="dns-prefetch" href="//s.w.org">
-	<link rel="alternate" type="application/rss+xml" title="ASTAR CATS &raquo; フィード" href="/feed/">
-	<link rel="alternate" type="application/rss+xml" title="ASTAR CATS &raquo; コメントフィード" href="/comments/feed/">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
 	<script type="text/javascript">
 		window._wpemojiSettings = { "baseUrl": "https:\/\/s.w.org\/images\/core\/emoji\/13.1.0\/72x72\/", "ext": ".png", "svgUrl": "https:\/\/s.w.org\/images\/core\/emoji\/13.1.0\/svg\/", "svgExt": ".svg", "source": { "concatemoji": "https:\/\/ponta0213.xsrv.jp\/Lirara\/wp-includes\/js\/wp-emoji-release.min.js?ver=5.9.3" } };
 		/*! This file is auto-generated */
@@ -1186,7 +1191,7 @@
 										<input id="cp_tabfour031" type="checkbox" name="tabs">
 										<label for="cp_tabfour031">Where can I mint an Astar Cats? </label>
 										<div class="cp_actab-content">
-											<p>You can mint a Astar Cat on our official website (link to mint page)!</p>
+											<p>You can mint a Astar Cat on our official website (Comming Soon)!</p>
 										</div>
 									</div>
 									<div class="cp_actab">
