--- a/index.html
+++ b/index.html
@@ -733,13 +733,13 @@
 									.elementor-widget-text-editor .elementor-drop-cap-letter {
 										display: inline-block
 									}
-								</style> &#8211; AstarCats is the first cats NFT collection on Astar Network<br>
-								&#8211; AstarCats is not just another PFP project, but it comes with many utilities and holder benefits
+								</style> AstarCats is the first cats NFT collection on Astar Network<br>
+								AstarCats is not just another PFP project, but it comes with many utilities and holder benefits
 								planned ahead!
 								<br>
-								&#8211; Our ultimate mission is to support promising projects on Astar Network by providing our creative
+								Our ultimate mission is to support promising projects on Astar Network by providing our creative
 								resources. <br>
-								&#8211; The art is CC0(Creative Common zero), which means you will own all rights to the NFT you
+								The art is CC0(Creative Common zero), which means you will own all rights to the NFT you
 								mint/buy. This will allow you or any projects to use AstarCats brand and help create AstarCats
 								ecosystem.
 
@@ -1191,7 +1191,7 @@
 										<input id="cp_tabfour031" type="checkbox" name="tabs">
 										<label for="cp_tabfour031">Where can I mint an Astar Cats? </label>
 										<div class="cp_actab-content">
-											<p>You can mint a Astar Cat on our official website (Comming Soon)!</p>
+											<p>You can mint a Astar Cat on our official website (Coming Soon)!</p>
 										</div>
 									</div>
 									<div class="cp_actab">
@@ -1252,8 +1252,8 @@
 										</div>
 									</div>
 									<div class="cp_actab">
-										<input id="cp_tabfour037" type="checkbox" name="tabs">
-										<label for="cp_tabfour037">How will the fund be used?</label>
+										<input id="cp_tabfour038" type="checkbox" name="tabs">
+										<label for="cp_tabfour038">How will the fund be used?</label>
 										<div class="cp_actab-content">
 											<p>DAO 30%<br>
 												NextPhase Development 20%<br>
