--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
 									.elementor-widget-text-editor .elementor-drop-cap-letter {
 										display: inline-block
 									}
-								</style> AstarCats is the first cats NFT collection on Astar Network<br>
+								</style> AstarCats is the first cats NFT collection on Astar Network.<br>
 								AstarCats is not just another PFP project, but it comes with many utilities and holder benefits
 								planned ahead!
 								<br>
