add mint button

--- a/index.html
+++ b/index.html
@@ -621,11 +621,12 @@
 											data-id="673f4f0" data-element_type="widget" data-widget_type="button.default">
 											<div class="elementor-widget-container">
 												<div class="elementor-button-wrapper">
-													<!--<a href="/mint/" class="elementor-button-link elementor-button elementor-size-md" role="button">
-						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">mint</span>
-		</span>
-					</a>-->
+													<a href="https://mint.astarcats.xyz/"
+														class="elementor-button-link elementor-button elementor-size-md" role="button">
+														<span class="elementor-button-content-wrapper">
+															<span class="elementor-button-text">mint</span>
+														</span>
+													</a>
 												</div>
 											</div>
 										</div>
