Remove mint info

--- a/index.html
+++ b/index.html
@@ -1179,18 +1179,9 @@
 										<input id="cp_tabfour031" type="checkbox" name="tabs">
 										<label for="cp_tabfour031">Where can I mint an Astar Cats? </label>
 										<div class="cp_actab-content">
-											<p>You can mint a Astar Cat on our official website (Coming Soon)!</p>
-										</div>
-									</div>
-									<div class="cp_actab">
-										<input id="cp_tabfour032" type="checkbox" name="tabs">
-										<label for="cp_tabfour032">How do I mint an Astar Cats?</label>
-										<div class="cp_actab-content">
-											<p>1) Go to our official website. <br>2) Connect your Metamask wallet by clicking the
-												“Connect Wallet” button. <br>3) Select Astar Network <br>4) Select how many NFTs to mint then
-												click the “Mint” button. <br>5) Confirm the transaction through Metamask. <br>6) Welcome to
-												Astar Cats family!
-											</p>
+											<p>AstarCats is SOLD OUT! You can buy AstarCats on <a
+													href="https://tofunft.com/collection/astarcats/items" target="_blank"
+													rel="noopener">TofuNFT</a></p>
 										</div>
 									</div>
 
